[tool.poetry]
name = "cadence"
version = "0.1.0"
description = "ShellHacks Project"
authors = ["Michael Ha <michaelhabao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.70"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
